<resources>
    <string name="app_name">휴아봇</string>
    <string name="menu">메뉴</string>
    <string name="cafeteria">학식</string>
    <string name="subway">전철</string>
    <string name="bus">버스</string>
    <string name="shuttle">셔틀버스</string>
    <string name="dormitory">기숙사</string>
    <string name="shuttlecock_o">셔틀콕</string>
    <string name="station">한대앞역</string>
    <string name="jungang_station">중앙역(2번출구)</string>
    <string name="terminal">예술인(터미널)</string>
    <string name="shuttlecock_i">셔틀콕 건너편</string>
    <string name="shuttle_type_DH">한대앞 직행</string>
    <string name="shuttle_type_DY">예술인 직행</string>
    <string name="shuttle_type_DJ">중앙역 경유</string>
    <string name="shuttle_type_C">순환 버스</string>
    <string name="shuttle_type_D">직행 버스</string>
    <string name="shuttle_type_station">한대앞 행: %1$d분 후 출발</string>
    <string name="shuttle_type_station_out_of_service">한대앞 행: 운행 종료</string>
    <string name="shuttle_need_refresh">새로고침 필요!</string>
    <string name="shuttle_type_terminal">예술인 행: %1$d분 후 출발</string>
    <string name="shuttle_type_terminal_out_of_service">예술인 행: 운행 종료</string>
    <string name="shuttle_type_campus">캠퍼스 행: %1$d분 후 출발</string>
    <string name="shuttle_type_campus_out_of_service">캠퍼스 행: 운행 종료</string>
    <string name="shuttle_type_dormitory">기숙사 행: %1$d분 후 출발</string>
    <string name="shuttle_type_dormitory_out_of_service">기숙사 행: 운행 종료</string>
    <string name="shuttle_timetable">%1$s시 %2$s분</string>
    <string name="shuttle_time">%1$s시 %2$s분 (%3$d분 후) 출발</string>
    <string name="bus_route_name">%1$s (%2$s)</string>
    <string name="bus_realtime_item">%1$d분 후 도착 (%2$d 전 / %3$d 석)</string>
    <string name="bus_realtime_item_without_seat">%1$d분 후 도착 (%2$d 전)</string>
    <string name="bus_timetable_item">%1$s시 %2$s분 출발 (회차점 대기)</string>
    <string name="out_of_service">운행 종료</string>
    <string name="subway_up">상행</string>
    <string name="subway_down">하행</string>
    <string name="subway_arrival_item">%d분 후 도착</string>
    <string name="subway_terminal_item">%s행</string>
    <string name="subway_timetable">시간표</string>
    <string name="reading_room">열람실</string>
    <string name="map">지도</string>
    <string name="contact">전화부</string>
    <string name="calendar">학사력</string>
    <string name="setting">설정</string>
    <string name="shuttle_timetable_toolbar">%1$s - %2$s</string>
    <string name="weekdays">평일</string>
    <string name="weekends">주말</string>
    <string name="saturday">토요일</string>
    <string name="sunday">일요일</string>
    <string name="shuttle_route">정류장별 출발 시간</string>
    <string name="no_arrival_data">도착 정보가 없습니다.</string>
    <string name="notification">알림</string>
    <string name="no_cafeteria_menu">제공되는 메뉴가 없습니다.</string>
    <string name="saesol_high_school">새솔고</string>
    <string name="new_ansan_college">신안산대</string>
    <string name="purgio_6th">푸르지오6차후문</string>
    <string name="gangnam_station">강남역</string>
    <string name="suwon_station">수원역</string>
    <string name="sangnoksu_station">상록수역</string>
    <string name="bus_route">%1$s → %2$s</string>
    <string name="bus_route_interval">배차 간격: %1$d ~ %2$d분</string>
    <string name="bus_route_first_last_time">%1$s: %2$s:%3$s(첫차)/%4$s:%5$s(막차)</string>
    <string name="click_card_to_show_timetable">전체 시간표를 보기 위해서는 도착 정보를 클릭하세요.</string>
    <string name="more_function">추가 기능</string>
    <string name="button_image">Button Image</string>
    <string name="language">언어 설정</string>
    <string name="language_korean">한국어</string>
    <string name="language_english">English</string>
    <string name="language_chinese">汉语</string>
    <string name="app_theme">앱 테마</string>
    <string name="app_theme_light">밝은 테마</string>
    <string name="app_theme_dark">어두운 테마</string>
    <string name="app_theme_system">시스템 테마(자동)</string>
    <string name="donation">기부하기</string>
    <string name="scoring">평점 주기</string>
    <string name="developer_email">문의하기(이메일)</string>
    <string name="developer_chat">문의하기(카카오톡)</string>
    <string name="about">개발자 정보</string>
    <string name="developer_name">이름 - 이정인</string>
    <string name="developer_belong">학과/학번 - 소프트웨어/17</string>
    <string name="no_search_result">검색 결과가 없습니다.</string>
    <string name="on_campus">교내 기관</string>
    <string name="fast_food">패스트푸드</string>
    <string name="food_korean">한식</string>
    <string name="cafe">카페</string>
    <string name="food_vietnamese">베트남 음식</string>
    <string name="food_chinese">중식</string>
    <string name="chicken">치킨</string>
    <string name="bakery">빵집</string>
    <string name="food_western">양식</string>
    <string name="other_food">기타 식당</string>
    <string name="food_japanese">일식</string>
    <string name="pizza">피자</string>
    <string name="pub">술집</string>
    <string name="meat">고깃집</string>
    <string name="building">교내 건물</string>
    <string name="error_report">오류 제보</string>
    <string name="in_school">교내</string>
    <string name="out_school">교외</string>
    <string name="call_dialog_title">전화걸기</string>
    <string name="call_dialog_message">%1$s(%2$s)로 전화를 걸고 있습니다.</string>
    <string name="call_dialog_positive">전화걸기</string>
    <string name="call_dialog_negative">취소</string>
    <string name="contact_message">각 항목을 누르면 전화걸기로,\n길게 누르면 전체 이름을 볼 수 있어요.</string>
    <string name="month_header">%1$d년 %2$d월의 일정</string>
    <string name="start_date">%1$d월 %2$d일 %3$d시 %4$d분 ~</string>
    <string name="start_date_without_minute">%1$d월 %2$d일 %3$d시 ~</string>
    <string name="end_date">%1$d월 %2$d일 %3$d시 %4$d분</string>
    <string name="end_date_without_minute">%1$d월 %2$d일 %3$d시</string>
    <string name="target_grade_all">전체 학년</string>
    <string name="target_grade_1">1학년</string>
    <string name="target_grade_2">2학년</string>
    <string name="target_grade_3">3학년</string>
    <string name="target_grade_4">4학년 이상</string>
    <string name="schedule_date">%1$d월 %2$d일의 일정</string>
    <string name="schedule_item_end_time">~ %1$d년 %2$d월 %3$d일 %4$d시 %5$d분</string>
    <string name="schedule_item_end_time_without_minute">~ %1$d년 %2$d월 %3$d일 %4$d시</string>
    <string name="no_search_schedule">일정이 없습니다.</string>
    <string name="current_seat_header">잔여 좌석</string>
    <string name="total_seat_header">전체 좌석</string>
    <string name="campus">캠퍼스 선택</string>
    <string name="seoul_campus">서울</string>
    <string name="erica_campus">에리카</string>
    <string name="room_name_1_2f">제1열람실 (2F)</string>
    <string name="room_name_2_4f">제2열람실 (4F)</string>
    <string name="room_name_3_4f">제3열람실 (4F)</string>
    <string name="holmz_room">HOLMZ 열람석</string>
    <string name="law_room_1_3f">법학 제1열람실[3층]</string>
    <string name="law_room_2a_4f">법학 제2열람실A[4층]</string>
    <string name="law_room_2b_4f">법학 제2열람실B[4층]</string>
    <string name="room_name_1_underground_1f">제1열람실[지하1층]</string>
    <string name="room_name_2_underground_1f">제2열람실[지하1층]</string>
    <string name="room_name_3_3f">제3열람실[3층]</string>
    <string name="no_email_app">이메일 전송을 지원하는 앱이 없습니다.</string>
    <string name="no_internet_app">인터넷 앱이 없습니다.</string>
    <string name="no_dial_app">전화를 걸 수 있는 앱이 없습니다.</string>
    <string name="closest_shuttle_stop">가장 가까운 정류장</string>
    <string name="shuttle_first_last_bus">오늘의 첫/막차 (셔틀콕)</string>
    <string name="shuttle_first_last_bus_time">%1$s시 %2$s분/%3$s시 %4$s분</string>
    <string name="guest_house">한양대컨벤션센터</string>
    <string name="main_gate">한양대정문</string>
    <string name="line_4">4호선</string>
    <string name="suin_bundang">수인분당선</string>
    <string name="bound_for">%1$s 행</string>
    <string name="incheon">인천</string>
    <string name="oido">오이도</string>
    <string name="cheongnyeongli">청량리</string>
    <string name="wangsimni">왕십리</string>
    <string name="jukjeon">죽전</string>
    <string name="gosaek">고색</string>
    <string name="ansan">안산</string>
    <string name="danggogae">당고개</string>
    <string name="nowon">노원</string>
    <string name="hansung_univ">한성대입구</string>
    <string name="sadang">사당</string>
    <string name="geumjeong">금정</string>
    <string name="breakfast">조식</string>
    <string name="lunch">중식</string>
    <string name="dinner">석식</string>
    <string name="cafeteria_teacher">교직원식당</string>
    <string name="cafeteria_student">학생식당</string>
    <string name="cafeteria_changbo">창업보육센터</string>
    <string name="cafeteria_food_court">푸드코트</string>
    <string name="cafeteria_dormitory">창의인재원식당</string>
    <string name="error_fetch_shuttle_date">네트워크 문제로 인해 셔틀버스 정보를 불러오는데 실패했습니다.</string>
    <string name="error_fetch_shuttle_timetable">네트워크 오류로 인해 셔틀버스 시간표를 불러오는데 실패했습니다.</string>
    <string name="error_fetch_bus_data">네트워크 오류로 인해 버스 정보를 불러오는데 실패했습니다.</string>
    <string name="error_fetch_bus_timetable">네트워크 오류로 인해 버스 시간표를 불러오는데 실패했습니다.</string>
    <string name="no_timetable_data">조회된 시간표 정보가 없습니다.</string>
    <string name="error_fetch_subway_data">네트워크 오류로 인해 전철 정보를 불러오는데 실패했습니다.</string>
    <string name="no_arrival_data_subway_down">도착 정보가 없습니다.(하행)</string>
    <string name="no_arrival_data_subway_up">도착 정보가 없습니다.(상행)</string>
    <string name="no_reading_room_data">조회된 열람실 목록이 없습니다.</string>
    <string name="need_permission_get_notification">알림을 받기 위해서는 접근 권한이 필요합니다.</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="update_cancelled">앱 업데이트가 취소되었습니다.</string>
    <string name="update_available">사용 가능한 업데이트가 있습니다.</string>
    <string name="happy_birthday">중요 알림</string>
    <string name="close">팝업 닫기</string>
    <string name="do_not_open_this_year">올해는 다시 열지 않기</string>
    <string name="congratulation_message">안녕하세요, 휴아봇 개발자인 경원여객3102입니다.\n오늘(12/12)는 제 생일이라서요. ㅎㅎ\n많은 사람들에게 축하받고 싶었던 걸로 :)\n얼마 남지 않은 2학기 잘 마무리하고 시험 화이팅!</string>
    <string name="add_shuttle_widget">셔틀버스 위젯 추가</string>
    <string name="need_permission_get_background_location">홈 위젯에서 위치를 확인하기 위해 위치 권한을 항상 허용으로 바꿔주세요.</string>
    <string name="shuttle_updated_time">업데이트 시간: %s</string>
</resources>