<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <data>
        <variable
            name="vm"
            type="app.kobuggi.hyuabot.ui.main.MainViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navGraph="@navigation/home_nav_graph" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/additional_menu"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/hanyang_primary"
            >
            <Button
                android:id="@+id/reading_room_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableTop="@drawable/ic_reading_room"
                android:background="@android:color/transparent"
                android:text="@string/reading_room"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/map_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableTop="@drawable/ic_map"
                android:background="@android:color/transparent"
                android:text="@string/map"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/contact_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableTop="@drawable/ic_phone"
                android:background="@android:color/transparent"
                android:text="@string/contact"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/calendar_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableTop="@drawable/ic_calendar"
                android:background="@android:color/transparent"
                android:text="@string/calendar"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/setting_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableTop="@drawable/ic_setting"
                android:background="@android:color/transparent"
                android:text="@string/setting"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bottom_navigation_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/hanyang_primary"
        >
            <Button
                android:id="@+id/shuttle_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableTop="@drawable/ic_shuttle"
                android:background="@android:color/transparent"
                android:text="@string/shuttle"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/bus_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableTop="@drawable/ic_bus"
                android:background="@android:color/transparent"
                android:text="@string/bus"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/subway_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableTop="@drawable/ic_subway"
                android:background="@android:color/transparent"
                android:text="@string/subway"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/cafeteria_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableTop="@drawable/ic_cafeteria"
                android:background="@android:color/transparent"
                android:text="@string/cafeteria"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/menu_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableTop="@drawable/ic_menu"
                android:background="@android:color/transparent"
                android:text="@string/menu"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>