<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="vm"
            type="app.kobuggi.hyuabot.ui.menu.theme.AppThemeDialogViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/hanyang_primary"
            android:padding="20dp"
            android:gravity="center"
            />
        <TextView
            android:text="@string/developer_name"
            android:textSize="20sp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primaryTextColor" />
        <TextView
            android:text="@string/developer_belong"
            android:textSize="20sp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>
</layout>
