<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/cardBackground"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp"
    app:strokeColor="@color/hanyang_primary"
    app:strokeWidth="0dp" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/hanyang_primary" >
            <TextView
                android:id="@+id/shuttle_stop_name"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontWeight="900" />
            <View
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent" />
            <ImageButton
                android:id="@+id/shuttle_stop_location"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_vertical | end"
                android:src="@drawable/ic_map_marker"
                android:background="@android:color/transparent"
                tools:ignore="ContentDescription"
                app:tint="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/shuttle_DH"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal" >
            <TextView
                android:text="@string/shuttle_type_DH"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/hanyang_secondary"
                android:textSize="16sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/shuttle_time_DH_first"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/shuttle_time"
                    android:gravity="center"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/shuttle_time_DH_second"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/shuttle_time"
                    android:gravity="center"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
        <View
            android:id="@+id/shuttle_stop_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#7f7f7f"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />
        <LinearLayout
            android:id="@+id/shuttle_DY"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal" >
            <TextView
                android:text="@string/shuttle_type_DY"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/hanyang_tertiary"
                android:textSize="16sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/shuttle_time_DY_first"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/shuttle_time"
                    android:gravity="center"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/shuttle_time_DY_second"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/shuttle_time"
                    android:gravity="center"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#7f7f7f"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />
        <LinearLayout
            android:id="@+id/shuttle_C"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal" >
            <TextView
                android:text="@string/shuttle_type_C"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/hanyang_quaternary"
                android:textSize="16sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/shuttle_time_C_first"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/shuttle_time"
                    android:gravity="center"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/shuttle_time_C_second"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/shuttle_time"
                    android:gravity="center"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>